--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h2 class="plans-title">Escoge el tamaño de tu tatuaje</h3>
                 <p class="plans-subtitle">Tenemos precios determinados para diseños ya hechos dependiendo del tamaño que ocupes tu tatuaje</p>
             </div>
-            
+
             <section class="plans-section--main-plans-container">
 
             <div class="plans-section--plans-container secondary-plan">
@@ -114,5 +114,19 @@
         </section>
         </section>
     </main>
-    <footer></footer>
+    <footer class="footer-container">
+        <section class="right-footer--list">
+            <ul>
+                <li><a href="">Twitter</a></li>
+                <li><a href="">Github</a></li>
+                <li><a href="">Mas proyectos</a></li>
+            </ul>
+        </section>
+        <section class="left-footer--list">
+            <ul>
+                <li><span class="footer-logo"></span></li>
+                <li><span class="copyright">Copyright ©</span></li>
+            </ul>
+        </section>
+    </footer>
 </html>
