--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header__title-container">
             <h1>Tatuando estilos</h1>
             <p>Los mejores artistas se encuentran en Dragon tattoo studio. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quis libero rem. Itaque sapiente laudantium non labore corporis, veritatis.</p>
-            <a href="" class="header__button">Agenda una cita <span></span>
+            <a href="#" class="header__button">Agenda una cita <span></span>
             </a>
         </div>
     </header>
@@ -91,7 +91,7 @@
                     <h3 class="plans-type">Tamaño mediano</h3>
                     <div class="plans-cost"><sup>$</sup><span>99</span></div>
                     <p class="plans-description">Tamaño del tattoo: 18cm. Diseño dentro del catalogo</p>
-                    <a href="" class="plans-button">Escoger este <span class="plans-icon"></span></a>
+                    <a href="#" class="plans-button">Escoger este <span class="plans-icon"></span></a>
                 </div>
             </div>
             <div class="plans-section--plans-container">
@@ -115,18 +115,17 @@
         </section>
     </main>
     <footer class="footer-container">
-        <section class="right-footer--list">
-            <ul>
-                <li><a href="">Twitter</a></li>
-                <li><a href="">Github</a></li>
-                <li><a href="">Mas proyectos</a></li>
-            </ul>
-        </section>
         <section class="left-footer--list">
             <ul>
-                <li><span class="footer-logo"></span></li>
-                <li><span class="copyright">Copyright ©</span></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Github</a></li>
+                <li><a href="#">Mas proyectos</a></li>
             </ul>
+        </section>
+        <section class="right-footer--list">
+                <div>
+                    <img class="footer-logo" src="./asset/img/logo-white.svg" alt="logo tatto dragon">
+                </div>
         </section>
     </footer>
 </html>
