--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla repudiandae blanditiis corrupti sit, sunt incidunt porro tenetur asperiores earum? Provident ut enim suscipit dicta aspernatur voluptatibus architecto illo assumenda minus.
                 </p>
                 <picture>
-                    <source media="(min-width: 400px)" srcset="./asset/img/tattoo_adv_tablet.png">;
-                    <source media="(min-width: 760px)" srcset="./asset/img/tattoo_Adv_lap.png">;
-                    <img src="./asset/img/tattoo_adv.jpeg" alt="anuncio neon de tattoo" class="main__section-img">
+                    <source media="(min-width: 324px)" srcset="./asset/img/tattoo_adv_tablet.png">;
+                    <source media="(min-width: 648px)" srcset="./asset/img/tattoo_Adv_lap.png">;
+                    <img src="./asset/img/tattoo_adv.png" alt="anuncio neon de tattoo" class="main__section-img">
                 </picture>
             </div>
         </section>
@@ -84,7 +84,10 @@
             </section>
         </section>
         <section class="comodin-section">
+            <picture>
+                <source media="(min-width: 450px)" srcset="./asset/img/tattoo-people-lap.jpeg">
                 <img class="comodin-section--img" src="./asset/img/tattoo-people.jpeg" alt="persona tatuando">
+            </picture>
             <p class="comodin-section--text">Dragon studio ink</p> 
         </section>
 
